--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,8 +5,8 @@ layout: default
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-gray">
         <div class="container d-flex justify-content-between">
-            <a class="my-1 title text-white" href="https://nephoseu.github.io/LGPowerBI/">
-                <img src="https://raw.githubusercontent.com/nephoseu/JJ-Theme/main/assets/JNJ-5579062e.png.png" alt="Johnson & Johnson" style="width:155px;height:66px;"/>
+            <a class="my-1 title text-white" href="https://nephoseu.github.io/JJPowerPlatform/">
+                <img src="https://github.com/nephoseu/JJ-Theme/raw/master/assets/JNJ-5579062e.png" alt="Johnson & Johnson" style="width:155px;height:66px;"/>
             </a>
             <span class="my-1 title text-black">Johnson&Johnson PowerPlatform Training</span>
              <span class="ml-2">&nbsp;</span>
