--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,8 +5,8 @@ layout: default
 <body data-spy="scroll" data-target="#linksMenu">
     <nav class="navbar navbar-expand-lg navbar-dark bg-gray">
         <div class="container d-flex justify-content-between">
-            <a class="my-1 title text-white" href="https://nephossi.github.io/LGPowerBI/">
-                <img src="https://github.com/NephosSI/LG-Theme/raw/master/assets/LGLogo.png" alt="Liberty Global" style="width:100px;height:100px;"/>
+            <a class="my-1 title text-white" href="https://nephoseu.github.io/JJPowerPlatform/">
+                <img src="https://github.com/nephoseu/JJ-Theme/blob/main/assets/JNJ-5579062e.png" alt="Johnson & Johnson" style="width:155px;height:66px;"/>
             </a>
             <span class="my-1 title text-black">Labs</span>
             <span class="ml-1"><a href="{{ site.github.url }}">&#8801;</a></span>
