--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
     <nav class="navbar navbar-expand-lg navbar-dark bg-gray">
         <div class="container d-flex justify-content-between">
             <a class="my-1 title text-white" href="https://nephoseu.github.io/JJPowerPlatform/">
-                <img src="https://github.com/nephoseu/JJ-Theme/blob/main/assets/JNJ-5579062e.png" alt="Johnson & Johnson" style="width:155px;height:66px;"/>
+                <img src="https://raw.githubusercontent.com/nephoseu/JJ-Theme/refs/heads/main/assets/JNJ-5579062e.png" alt="Johnson & Johnson" style="width:155px;height:66px;"/>
             </a>
             <span class="my-1 title text-black">Labs</span>
             <span class="ml-1"><a href="{{ site.github.url }}">&#8801;</a></span>
